processor/src/test/resources/model/good/LowerCaseNamingPolicyModel.java
package io.logansquarex.processor;

import io.logansquarex.core.Constants;
import io.logansquarex.core.annotation.XBuildConfig;
import io.logansquarex.core.annotation.JsonField;
import io.logansquarex.core.annotation.JsonObject;
import io.logansquarex.core.annotation.JsonObject.FieldNamingPolicy;

import java.util.List;
@XBuildConfig(targetPkg = Constants.LOADER_PACKAGE_NAME,targetClass = Constants.LOADER_CLASS_NAME,autoMerge = true)
@JsonObject(fieldNamingPolicy = FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES)
public class LowerCaseNamingPolicyModel {

    @JsonField
    public String camelCaseString;

    @JsonField
    public List<String> camelCaseList;

}
